new commit final

--- a/profile.html
+++ b/profile.html
@@ -28,7 +28,7 @@
         <div class="header">
           <div class="title d-flex align-center">
             <h2 class="Open-Intelligence-Platform">
-              <a href="dashboard.html"> Open Intelligence Platform </a>
+              <a href="dashboard.html"> SpeedX </a>
             </h2>
             <div class="select selectIndustry">
               <div
